--- a/client/style.css
+++ b/client/style.css
@@ -148,3 +148,37 @@ form img {
   width: 30px;
   height: 30px;
 }
+
+.left-menu {
+  width: 50px;
+  height: 100%;
+  background: #343541;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.left-menu button {
+  width: 50px;
+  height: 50px;
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  outline: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.left-menu button img {
+  width: 30px;
+  height: 30px;
+  object-fit: contain;
+}
+
+.left-menu button:hover {
+  background: rgba(255, 255, 255, 0.1);
+}
